--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>happy</h1>
     <h2>puppy not here</h2>
+    <p>Here we can see klots of kids playing, not so good properly</p>
 </body>
 </html>
